cbits/Bullet.h

void btSoftBody_Config_kKHR_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->kKHR
float btSoftBody_Config_kKHR_get(void *c); //attribute: ::btScalar btSoftBody_Config->kKHR
void btSoftBody_Config_kSHR_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->kSHR
float btSoftBody_Config_kSHR_get(void *c); //attribute: ::btScalar btSoftBody_Config->kSHR
void btSoftBody_Config_kAHR_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->kAHR
float btSoftBody_Config_kAHR_get(void *c); //attribute: ::btScalar btSoftBody_Config->kAHR
void btSoftBody_Config_kSRHR_CL_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->kSRHR_CL
float btSoftBody_Config_kSRHR_CL_get(void *c); //attribute: ::btScalar btSoftBody_Config->kSRHR_CL
void btSoftBody_Config_kSKHR_CL_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->kSKHR_CL
float btSoftBody_Config_kSKHR_CL_get(void *c); //attribute: ::btScalar btSoftBody_Config->kSKHR_CL
void btSoftBody_Config_kSSHR_CL_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->kSSHR_CL
float btSoftBody_Config_kSSHR_CL_get(void *c); //attribute: ::btScalar btSoftBody_Config->kSSHR_CL
void btSoftBody_Config_kSR_SPLT_CL_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->kSR_SPLT_CL
float btSoftBody_Config_kSR_SPLT_CL_get(void *c); //attribute: ::btScalar btSoftBody_Config->kSR_SPLT_CL
void btSoftBody_Config_kSK_SPLT_CL_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->kSK_SPLT_CL
float btSoftBody_Config_kSK_SPLT_CL_get(void *c); //attribute: ::btScalar btSoftBody_Config->kSK_SPLT_CL
void btSoftBody_Config_kSS_SPLT_CL_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->kSS_SPLT_CL
float btSoftBody_Config_kSS_SPLT_CL_get(void *c); //attribute: ::btScalar btSoftBody_Config->kSS_SPLT_CL
void btSoftBody_Config_maxvolume_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->maxvolume
float btSoftBody_Config_maxvolume_get(void *c); //attribute: ::btScalar btSoftBody_Config->maxvolume
void btSoftBody_Config_timescale_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->timescale
float btSoftBody_Config_timescale_get(void *c); //attribute: ::btScalar btSoftBody_Config->timescale
void btSoftBody_Config_viterations_set(void *c,int a); //attribute: int btSoftBody_Config->viterations
int btSoftBody_Config_viterations_get(void *c); //attribute: int btSoftBody_Config->viterations
void btSoftBody_Config_piterations_set(void *c,int a); //attribute: int btSoftBody_Config->piterations
int btSoftBody_Config_piterations_get(void *c); //attribute: int btSoftBody_Config->piterations
void btSoftBody_Config_diterations_set(void *c,int a); //attribute: int btSoftBody_Config->diterations
int btSoftBody_Config_diterations_get(void *c); //attribute: int btSoftBody_Config->diterations
void btSoftBody_Config_citerations_set(void *c,int a); //attribute: int btSoftBody_Config->citerations
int btSoftBody_Config_citerations_get(void *c); //attribute: int btSoftBody_Config->citerations
void btSoftBody_Config_collisions_set(void *c,int a); //attribute: int btSoftBody_Config->collisions
int btSoftBody_Config_collisions_get(void *c); //attribute: int btSoftBody_Config->collisions
void btSoftBody_Config_m_vsequence_set(void *c,void* a); //attribute: ::btAlignedObjectArray<btSoftBody::eVSolver::_> btSoftBody_Config->m_vsequence
void* btSoftBody_Config_m_vsequence_get(void *c); //attribute: ::btAlignedObjectArray<btSoftBody::eVSolver::_> btSoftBody_Config->m_vsequence
void btSoftBody_Config_m_psequence_set(void *c,void* a); //attribute: ::btAlignedObjectArray<btSoftBody::ePSolver::_> btSoftBody_Config->m_psequence
void* btSoftBody_Config_m_psequence_get(void *c); //attribute: ::btAlignedObjectArray<btSoftBody::ePSolver::_> btSoftBody_Config->m_psequence